# discmon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
include/data/: statement.txt
include/help/: header.txt
src/: command.rs  event.rs  main.rs  prelude.rs
src/command/: data.rs  help.rs  ping.rs
src/util/: anchor.rs  custom_id.rs  data.rs  logger.rs  mod.rs  timestamp.rs  traits.rs
